--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css">  
-    <link rel="stylesheet" type="text/css" media="all" href="/Users/wangxin/Desktop/blog/css/1.css">
+    <link rel="stylesheet" type="text/css" media="all" href="css/1.css">
 
 </head>
 <body _hover-ignore="1">
@@ -25,7 +25,7 @@
 
 
 <!-- banner -->
-<div class="banner" style="background: url(/Users/wangxin/Desktop/blog/image/banner.jpg);">
+<div class="banner" style="background: url(image/banner.jpg);">
     <!-- 菜单按钮 -->
     <!-- <div class="menu menuicon hidden-xs">
         <i class="fa fa-bars"></i>
@@ -37,7 +37,7 @@
             <div class="col-md-12">
                 <div class="personInfo">
                     <div class="logo">
-                      	<img src="/Users/wangxin/Desktop/blog/image/kide.jpg" alt="logo"></a>
+                      	<img src="image/kide.jpg" alt="logo"></a>
                      </div>
                     <div class="logoTheme">
                         <h1>专注于Spark开发</h1>
